# LLM-Firewall

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  claude_v1_handoff.md  docker-compose.tls.yml  docker-compose.yml  start_local.sh  testing_guide.md
.github/workflows/: security.yml
analyzer/: main.py  requirements.txt
analyzer/api/: routes.py
analyzer/core/: firecracker_backend.py  firewall.py  risk_engine.py  sandbox.py
analyzer/tests/: test_sandbox.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/: proxy.ts
docs/MD_FILES/: DEMO.md  DEMO_RUNBOOK.md  DR_RUNBOOK.md  MVP  PROJECT_STATUS.md  README.md  architecture_plan.md  testing_guide_v2.md
docs/architecture/: TITAN_MODE_Architecture_Review.md  design_document.md  enterprise_platform_v2_review.md
docs/operations/: Runbook_OOM_Redpanda.md
docs/security/: RED_TEAM_REVIEW_Phase4.md  scan-report.json
gateway/: .env.example  Dockerfile  dump.rdb  go.mod  go.sum
gateway/plugins/: confidential_terms.wasm
gateway/sql/: 001_schema.sql  002_seed.sql
helm/titan/: Chart.yaml  README.md  values.yaml
k8s/: asr-deployment.yaml  gateway-deployment.yaml  istio-gateway.yaml
loadtest/: .gitignore  README.md  go.mod  main.go
ml_engine/: Dockerfile  pytest.ini  requirements.txt  test_ml_pipeline.py
platform/: docker-compose.yaml
scripts/: backup.sh  gen-certs.sh  restore.sh  scan_report.py  security-scan.sh  smoke.sh
sdk/node/: README.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/titan_firewall/: __init__.py  client.py
terraform/: .gitignore  README.md
(+188 files in other folders)
