[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-firewall"
version = "1.0.0"
description = "Python SDK for the TITAN Gateway zero-trust LLM firewall Admin API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sharvik Sutar" }]
keywords = ["llm", "firewall", "security", "gateway", "sdk"]
dependencies = []  # standard library only

[project.urls]
Homepage = "https://github.com/sharvik/llm-firewall"

[tool.setuptools.packages.find]
include = ["titan_firewall*"]
